<resources>
    <string name="app_name">Acitivity</string>
    <string name="hello_msg">Hello world</string>
    <string name="login_button_text">Login Button</string>
    <string name="button_text">I m a button</string>
    <string name="login">Login</string>
    <string name="loginname">Login name</string>
    <string name="password">Password</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">Finish Activity</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="what_does_this_do">What does this do ?</string>
    <string name="checkbox">CheckBox</string>
    <string name="radiobutton">RadioButton</string>
    <string name="switchon">Switch is On</string>
    <string name="switchoff">Switch is Off</string>
    <string name="response">Here is my response</string>
    <string name="start_chat">Start Chart</string>
    <string name="send_button">Send Button</string>
    <string name="start_weather">WeatherForecast</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
</resources>
