<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.krishnaveni.androidlabs.LoginActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/logintext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <EditText
        android:id="@+id/loginbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/loginname" android:inputType="textEmailAddress"/>
    <TextView
        android:id="@+id/passwordtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/passwordbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:inputType="textPassword"
        android:ems="10"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text" />
</LinearLayout>
